--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "dw-cli",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "bin/index.js",
+  "bin": {
+    "dw": "./bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
